Added the nav section for both html and styling in css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Robert Thurber - Home</title>
 </head>
 <body>
-    
+    <!-- this is where my nav bar section lives -->
+    <div class="nav-bar">
+        <div class="nav-name">
+            <h3>Think of something to add here</h3>
+        </div>
+        <div class="nav-links">
+            <ul>
+                <li> <a href="#">About me</a> </li>
+                <li> <a href="#">Projects</a> </li>
+                <li> <a href="#">Contact</a> </li>
+            </ul>
+        </div>
+    </div>
 </body>
-</html>`
+</html>
