Added a profile pic and updated index and css file to get nav bar looking clean

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- this is where my nav bar section lives -->
     <div class="nav-bar">
         <div class="nav-name">
-            <h3>Think of something to add here</h3>
+            <img src="./images/rt.png" alt="A pixel profile picture of Robert Thurber">
         </div>
         <div class="nav-links">
             <ul>
