Added the header section to index and styling in css along with new images

--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Robert Thurber - Home</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- this is where my nav bar section lives -->
-    <div class="nav-bar">
-        <div class="nav-name">
-            <img src="./images/rt.png" alt="A pixel profile picture of Robert Thurber">
+    <nav class="nav-bar">
+      <div class="nav-name">
+        <img
+          src="./images/rt.png"
+          alt="A pixel profile picture of Robert Thurber"
+        />
+      </div>
+      <div class="nav-links">
+        <ul>
+          <li><a href="#">About me</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <header class="introduction">
+      <div class="introduction-left">
+        <h1>Oh, Hi there!</h1>
+        <p>
+          <em>My name is Robert Thurber and I am a front end web developer. Below
+            you can take a look at some of my projects along with getting to know
+            more about me.</em>
+        </p>
+      </div>
+      <div class="introduction-right">
+        <img src="./images/intro-picture.png" alt="Picture of two computers with fake looking code on it" />
+      </div>
+    </header>
+    <main>
+        <h2> Check out my projects below</h2>
+        <div class="projects">
+            
         </div>
-        <div class="nav-links">
-            <ul>
-                <li> <a href="#">About me</a> </li>
-                <li> <a href="#">Projects</a> </li>
-                <li> <a href="#">Contact</a> </li>
-            </ul>
-        </div>
-    </div>
-</body>
+    </main>
+  </body>
 </html>
