Added the structure for the project section along with screenshots of the projects

--- a/index.html
+++ b/index.html
@@ -38,9 +38,20 @@
       </div>
     </header>
     <main>
-        <h2> Check out my projects below</h2>
+        <h2>A list of some of my favorite projects</h2>
         <div class="projects">
-            
+            <div class="project-list dice-game">
+                <h4>Dice game</h4>
+                <img src="./images/dicegame.jpg" alt="a screen shot of a dice game. Two dice on the screen with a roll button">
+            </div>
+            <div class="project-list drum-kit">
+                <h4>Drum kit </h4>
+                <img src="./images/drumkit.jpg" alt="a screen shot of different parts of a drum. With letters on them as well">
+            </div>
+            <div class="project-list flexbox">
+                <h4>Flexbox</h4>
+                <img src="./images/flexbox.png" alt="colorful boxes representing parts of a webpage">
+            </div>  
         </div>
     </main>
   </body>
