remove the background color and text color from * and added buttons for the project (code / live preview)

--- a/index.html
+++ b/index.html
@@ -28,31 +28,57 @@
       <div class="introduction-left">
         <h1>Oh, Hi there!</h1>
         <p>
-          <em>My name is Robert Thurber and I am a front end web developer. Below
-            you can take a look at some of my projects along with getting to know
-            more about me.</em>
+          <em
+            >My name is Robert Thurber and I am a front end web developer. Below
+            you can take a look at some of my projects along with getting to
+            know more about me.</em
+          >
         </p>
       </div>
       <div class="introduction-right">
-        <img src="./images/intro-picture.png" alt="Picture of two computers with fake looking code on it" />
+        <img
+          src="./images/intro-picture.png"
+          alt="Picture of two computers with fake looking code on it"
+        />
       </div>
     </header>
     <main>
-        <h2>A list of some of my favorite projects</h2>
-        <div class="projects">
-            <div class="project-list dice-game">
-                <h4>Dice game</h4>
-                <img src="./images/dicegame.jpg" alt="a screen shot of a dice game. Two dice on the screen with a roll button">
-            </div>
-            <div class="project-list drum-kit">
-                <h4>Drum kit </h4>
-                <img src="./images/drumkit.jpg" alt="a screen shot of different parts of a drum. With letters on them as well">
-            </div>
-            <div class="project-list flexbox">
-                <h4>Flexbox</h4>
-                <img src="./images/flexbox.png" alt="colorful boxes representing parts of a webpage">
-            </div>  
+      <h2>A list of some of my favorite projects</h2>
+      <div class="projects">
+        <div class="project-list dice-game">
+          <h4>Dice game</h4>
+          <img
+            src="./images/dicegame.jpg"
+            alt="a screen shot of a dice game. Two dice on the screen with a roll button"
+          />
+          <div class="project-button">
+            <button type="button"> <a rel="noopener" Git page" href="https://github.com/robertthurber/dice" target="_blank">View Code</a> </button>
+            <button type="button"><a rel="noopener" href="https://robertthurber.github.io/dice/" target="_blank">View Live page</a></button>
+          </div>
         </div>
+        <div class="project-list drum-kit">
+          <h4>Drum kit</h4>
+          <img
+            src="./images/drumkit.jpg"
+            alt="a screen shot of different parts of a drum. With letters on them as well"
+          />
+          <div class="project-button">
+            <button type="button"> <a rel="noopener" Git page" href="https://github.com/robertthurber/music" target="_blank">View Code</a> </button>
+            <button type="button"><a rel="noopener" href="https://robertthurber.github.io/music/" target="_blank">View Live page</a></button>
+          </div>
+        </div>
+        <div class="project-list flexbox">
+          <h4>Flexbox</h4>
+          <img
+            src="./images/flexbox.png"
+            alt="colorful boxes representing parts of a webpage"
+          />
+          <div class="project-button">
+            <button type="button"> <a rel="noopener" Git page" href="https://github.com/robertthurber/flexbox-Challenge" target="_blank">View Code</a> </button>
+            <button type="button"><a rel="noopener" href="https://robertthurber.github.io/flexbox-Challenge/" target="_blank">View Live page</a></button>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
