added filler text

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             src="./images/dicegame.jpg"
             alt="a screen shot of a dice game. Two dice on the screen with a roll button"
           />
+          <p>description  will go here</p>
           <div class="project-button">
             <button type="button"> <a rel="noopener" Git page" href="https://github.com/robertthurber/dice" target="_blank">View Code</a> </button>
             <button type="button"><a rel="noopener" href="https://robertthurber.github.io/dice/" target="_blank">View Live page</a></button>
@@ -62,6 +63,7 @@
             src="./images/drumkit.jpg"
             alt="a screen shot of different parts of a drum. With letters on them as well"
           />
+          <p>description  will go here</p>
           <div class="project-button">
             <button type="button"> <a rel="noopener" Git page" href="https://github.com/robertthurber/music" target="_blank">View Code</a> </button>
             <button type="button"><a rel="noopener" href="https://robertthurber.github.io/music/" target="_blank">View Live page</a></button>
@@ -73,7 +75,7 @@
             src="./images/flexbox.png"
             alt="colorful boxes representing parts of a webpage"
           />
-          <p></p>
+          <p>description  will go here</p>
           <div class="project-button">
             <button type="button"> <a rel="noopener" Git page" href="https://github.com/robertthurber/flexbox-Challenge" target="_blank">View Code</a> </button>
             <button type="button"><a rel="noopener" href="https://robertthurber.github.io/flexbox-Challenge/" target="_blank">View Live page</a></button>
